syntax = "proto3";

package bankaccounting;

service BankAccounting {
    rpc OpenBankAccount(OpenBankAccountRequest) returns (OpenBankAccountResponse) {}
}

message OpenBankAccountRequest {
    string bank_account_id = 1;
    string bank_account_holder_id = 2;
    float opening_balance = 3;
}

message OpenBankAccountResponse {}
